--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Open up the console to check your work!</p>
+
+    <script src="index.js" ></script>
 </body>
 </html>
