--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <p>Open up the console to check your work!</p>
 
-    <script src="index.js" ></script>
+    <script src="index.js" defer ></script>
 </body>
 </html>
