--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>Open up the console to check your work!</p>
+    <button>Click me!</button>
 
-    <script src="index.js" defer ></script>
+    <script src="index2.js" defer ></script>
 </body>
 </html>
